--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                                 <div class="col-md-7 col-lg-6 ">
                                     <div class="detail-box" style="background-color: transparent;">
                                         <h1>
-                                            Os Melhore<br> Modelos pelo Melhor Preço
+                                            Os Melhores<br> Modelos pelo Melhor Preço
                                         </h1>
                                         <div class="btn-box">
                                             <a href="#menu">
