--- a/index.html
+++ b/index.html
@@ -651,7 +651,9 @@
         </button></a>
 
     <!-- Icon FIXO -->
-
+    <a href="https://templatesorayacop.com.br"><button class="fixed-icon-2">
+        <ion-icon name="arrow-undo-outline"></ion-icon>
+    </button></a>
 
     <!-- Mensage Alert -->
     <div id="successMessage"
