--- a/index.html
+++ b/index.html
@@ -52,25 +52,26 @@
             background-color: #222831;
         }
         .fixed-icon-2 {
-            position: fixed;
-            bottom: 90px;
-            right: 20px;
-            width: 60px;
-            height: 60px;
-            background: linear-gradient(-135deg, #141c44, #8e3988);
-            border-radius: 50%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            color: rgb(246, 246, 246);
-            font-size: 24px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-            cursor: pointer;
-            z-index: 1000;
+             position: fixed;
+        bottom: 90px;
+        right: 20px;
+        width: 60px;
+        height: 60px;
+        background: linear-gradient(-135deg, #010101, #292929);
+        border-radius: 50%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        color: rgb(242, 242, 242);
+        font-size: 24px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        cursor: pointer;
+        z-index: 1000;
+
         }
 
         .fixed-icon-2:hover {
-            background: linear-gradient(-135deg, #8e3988, #141c44)
+             background: linear-gradient(-135deg, #292929, #010101);
         }
     </style>
 </head>
@@ -650,10 +651,10 @@
             <ion-icon name="cart-outline"></ion-icon>
         </button></a>
 
-    <!-- Icon FIXO -->
-    <a href="https://www.sorayacop.com.br/templates.html"><button class="fixed-icon-2">
+    <!-- Icon FIXO 
+    <a href="https://www.sorayacop.com.br"><button class="fixed-icon-2">
         <ion-icon name="arrow-undo-outline"></ion-icon>
-    </button></a>
+    </button></a>-->
 
     <!-- Mensage Alert -->
     <div id="successMessage"
