--- a/index.html
+++ b/index.html
@@ -651,10 +651,10 @@
             <ion-icon name="cart-outline"></ion-icon>
         </button></a>
 
-    <!-- Icon FIXO 
+    <!-- Icon FIXO -->
     <a href="https://www.sorayacop.com.br"><button class="fixed-icon-2">
         <ion-icon name="arrow-undo-outline"></ion-icon>
-    </button></a>-->
+    </button></a>
 
     <!-- Mensage Alert -->
     <div id="successMessage"
